--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "author": "Outdam Meas <mstdam@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "tslib": "~2.6"
   },
   "volta": {
