--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": ">= 18.12 <19"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "~29.5",
-    "@types/node": "~18",
+    "@types/node": "^18.17.11",
     "@typescript-eslint/eslint-plugin": "~6.2",
     "@typescript-eslint/parser": "~6.2",
     "eslint": "~8.46",
