--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^18.17.11",
     "@typescript-eslint/eslint-plugin": "~6.2",
     "@typescript-eslint/parser": "~6.2",
+    "concurrently": "^8.2.1",
     "eslint": "~8.46",
     "eslint-config-prettier": "~9.0",
     "eslint-plugin-jest": "~27.2",
     "jest": "~29.6",
+    "nodemon": "^3.0.1",
     "prettier": "~3.0",
     "rimraf": "~5.0",
     "ts-api-utils": "~1.0",
@@ -23,10 +25,11 @@
     "typescript": "~5.1"
   },
   "scripts": {
-    "start": "node build/src/main.js",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/src/index.js\"",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
-    "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "build:release": "npm run clean && tsc -p tsconfig.release.json",
     "lint": "eslint . --ext .ts --ext .mts",
