--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/src/index.js\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/src/main.js\"",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build:watch": "tsc -w -p tsconfig.json",
@@ -42,7 +42,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "tslib": "~2.6"
+    "tslib": "~2.6",
+    "winston": "^3.10.0"
   },
   "volta": {
     "node": "18.12.1"
