--- a/package.json
+++ b/package.json
@@ -40,8 +40,17 @@
   "author": "Outdam Meas <mstdam@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.400.0",
+    "@aws-sdk/credential-providers": "^3.398.0",
+    "@aws-sdk/protocol-http": "^3.374.0",
+    "@aws-sdk/types": "^3.398.0",
+    "@aws-sdk/util-create-request": "^3.398.0",
+    "@aws-sdk/util-format-url": "^3.398.0",
+    "@smithy/signature-v4": "^2.0.5",
+    "@types/ioredis": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "redis": "^4.6.8",
     "tslib": "~2.6",
     "winston": "^3.10.0"
   },
